# festival

./: .gitignore  Cargo.toml  README.md  build.rs  deploy.py
examples/: code_k.rs
plot/: faulty.ipynb  latency.ipynb  repair-vs-object.ipynb  repair.ipynb  time.ipynb
plot/data/: Bandwidth.txt  CephLatency.txt  EntropyLatency.txt  FaultyLost.txt  KadLatency.txt  PingLatency.txt  RepairTraffic.save.txt  RepairTraffic.txt  TimeStore.txt  TimeStore2.txt  TimeStore3.txt
src/: encode.rs  entropy.rs  kad.rs  lib.rs  main.rs  network.rs  peer.rs  sim.rs  wirehair.rs
src/sim/: Cargo.toml
src/sim/src/: lib.rs  main.rs
