[package]
name = "festival"
version = "0.1.0"
edition = "2021"

[workspace]
members = ["src/sim"]

[dependencies]
async-trait = "0.1.59"
bincode = "1.3.3"
futures = "0.3.25"
libp2p = { version = "0.50.0", features = ["full"] }
rand = "0.8.5"
serde = { version = "1.0.149", features = ["derive"] }
tokio = { version = "1.22.0", features = ["full"] }
tracing = "0.1.37"
tracing-log = "0.1.3"
tracing-subscriber = "0.3.16"

[build-dependencies]
cmake = "0.1.49"

[profile.release]
panic = "abort"
